[package]
name = "simultrade-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
# concurrent hashmap
dashmap = "5.5.1"
# (de)serialization
serde = { version = "1.0.185", features = ["derive"] }
thiserror = "1.0.47"
# async runtime
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
# use #[axum_macros::debug_handler] on handler functions to find errors
axum-macros = "0.3.8"
